# trace

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 583f1c641847_add_repository_snapshots.py  754cc8b68188_create_repository_ingestion_tables.py  da3a55aed583_create_repositories_table.py  ea20bc7c066b_add_ingestion_tables_and_remove_.py  eddf9e31783c_remove_index_from_github_url.py  f4172fd60154_add_ingestion_jobs.py
backend/src/: main.py
backend/src/api/: exception_handlers.py  router.py
backend/src/api/dependencies/: github.py  (+2 more)
backend/src/cache/: redis.py
backend/src/clients/: github_client.py
backend/src/core/: config.py  exceptions.py  http.py  lifespan.py
backend/src/db/: base.py  dependencies.py  models.py  session.py
backend/src/github/: client.py  dependencies.py  reference.py  schemas.py
backend/src/health/: router.py
backend/src/ingestion/: dependencies.py  models.py  queue.py  router.py  schemas.py  service.py  store.py
backend/src/models/: __init__.py  enums.py  ingestion_job.py  repository.py  repository_snapshot.py
backend/src/repositories/: dependencies.py  import_service.py  models.py  router.py  schemas.py  service.py  store.py
backend/src/repository_versions/: dependencies.py  models.py  router.py  schemas.py  service.py  store.py
backend/src/schemas/: github.py  ingestion.py  repository.py  repository_snapshot.py
backend/src/services/: ingestion_coordinator.py  ingestion_runner.py  ingestion_service.py  repository_creation_service.py  repository_service.py
backend/src/stores/: ingestion_job_store.py  repository_snapshot_store.py  repository_store.py
backend/src/trace_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_exception_handlers.py
backend/tests/clients/: test_github_client.py
backend/tests/github/: test_client.py  test_reference.py  test_schemas.py
backend/tests/ingestion/: test_queue.py  test_router.py  test_schemas.py  test_service.py  test_store.py
backend/tests/repositories/: test_import_service.py  test_router.py  test_schemas.py  test_service.py  test_store.py
(+63 files in other folders)
